fixed vertical alignment of Congratulations message

--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,7 @@ hr {
     left: 0;
     right: 0;
     width: 95%;
-    height: 80%;
+	height: 95%;
     margin: auto;
 }
 
